Style links and add hr separator

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -246,36 +246,19 @@
             <div class="row justify-content-center">
                 <div class="col-8">
                     <p id="bio">I'm a software developer whose primary focus has been on front end web development, PHP, and Android. Recently I've entered the world of desktop application development using C# (WPF). I enjoy learning new technologies, reading about best practices, and dreaming up big ideas with my husband (a fellow software developer). I love sharp, clean, and responsive design and I can't wait to see where technology takes us in the years to come. I recently relocated to Dayton, Ohio and have joined two local meetups: Girl Develop It Dayton and Dayton Web Developers. I'm excited to participate in the local development community, expand my knowledge, and make contributions.</p>
-                    <p>Aside from programming, my favorite things include: being entertained by my husband, son, and crazy dog, fine art and art history, camping, hiking, and backpacking in the great outdoors, soccer, floor hockey, ice cream, Agatha Christie novels (especially Poirot), Lord of the Rings, Jane Austin movies, and British crime and mystery shows.</p>
-                </div>
-                <div class="col-6">
-                    
+                    <p>Aside from programming, my favorite things include: <span>being entertained by my husband, son, and crazy dog</span>, <span>fine art and art history</span>, <span>camping, hiking, and backpacking in the great outdoors</span>, <span>soccer</span>, <span>floor hockey</span>, <span>ice cream</span>, <span>Agatha Christie novels (especially Poirot)</span>, <span>Lord of the Rings</span>, <span class="favorite-things">Jane Austin movies</span>, and <span>British crime and mystery shows</span>.</p>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-6">
-                    <h2>My Favorite Things</h2>
-                    <ul id="favorite-things">
-                        <li>Being entertained by my husband, son, and crazy dog</li>
-                        <li>Fine art and art history</li>
-                        <li>Camping, hiking, and backpacking in the great outdoors</li>
-                        <li>Soccer and floor hockey</li>
-                        <li>Ice cream</li>
-                        <li>Agatha Christie novels</li>
-                        <li>Jane Austin novels</li>
-                        <li>British crime and mystery shows</li>
-                        <li>British period dramas</li>
-                        <li>LOTR</li>
-                    </ul>
-                </div>
-                <div class="col-6">
-                    <h2>Some Super Fun Cool Links</h2>
-                    <div>
-                        <a href="http://mrdoob.com/projects/harmony/" target="blank"><p>mrdoob</p></a>
-                        <a href="https://www.google.com/culturalinstitute/u/0/project/art-project" target="blank"><p>The Google Art Project</p></a>
-                        <a href="http://visualmelt.com/Andy-Goldsworthy" target="blank"><p>Andy Goldsworthy</p></a>
-                        <a href="https://vimeo.com/128428182" target="blank"><p>"Why Beauty Matters"</p></a>
-                        <a href="http://www.heropatterns.com/" target="blank"><p>Repeatable SVG Background Patterns</p></a>
+            <hr class="mx-auto hr-row-separator"> 
+            <div class="row justify-content-center">
+                <div class="col-10">
+                    <h2>Fun Corners of the Internet</h2>
+                    <div class="text-center">
+                        <a href="http://mrdoob.com/projects/harmony/" target="blank">Harmony</a>
+                        <a href="http://weavesilk.com/" target="blank">Weave Silk</a>
+                        <a href="https://www.google.com/culturalinstitute/u/0/project/art-project" target="blank">The Google Art Project</a>
+                        <a href="http://visualmelt.com/Andy-Goldsworthy" target="blank">Andy Goldsworthy</a>
+                        <a href="https://vimeo.com/128428182" target="blank">"Why Beauty Matters"</a>
                     </div>
                 </div>                        
             </div>                 
