--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,6 +9,7 @@
         <link href="vendor/bootstrap/css/bootstrap-reboot.css" rel="stylesheet">
         <link href="vendor/bootstrap/css/bootstrap-grid.css" rel="stylesheet">
         <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
+        <link href="vendor/fancybox/css/jquery.fancybox.css" rel="stylesheet">        
         <!-- Custom CSS -->
         <!--[if gt IE 9]><!-->
             <link href="css/custom.css" rel="stylesheet" >
@@ -268,9 +269,11 @@
             <div class="row">
                 <div class="card-deck">
                     <div class="card">
-                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <a href="img/smartVizag.png" data-fancybox="design" data-caption="My caption">
+                            <img src="img/smartVizag.png" class="card-img-top" alt="">
+                        </a>
                         <div class="card-block">
-                        <h4 class="card-title">Card title</h4>
+                        <h4 class="card-title">Smart Vizag</h4>
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="card-footer">
@@ -278,7 +281,9 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <a href="img/thrive6.jpg" data-fancybox="design" data-caption="My caption">
+                            <img src="img/thrive6.jpg" class="card-img-top" alt="">
+                        </a>
                         <div class="card-block">
                         <h4 class="card-title">Card title</h4>
                         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -288,7 +293,161 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <a href="img/thrive7.jpg" data-fancybox="design" data-caption="My caption">
+                            <img src="img/thrive7.jpg" class="card-img-top" alt="">
+                        </a>
+                        <div class="card-block">
+                        <h4 class="card-title">Card title</h4>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                        </div>
+                        <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <a href="img/thrive8.jpg" data-fancybox="design" data-caption="My caption">
+                            <img src="img/thrive8.jpg" class="card-img-top" alt="">
+                        </a>
+                        <div class="card-block">
+                        <h4 class="card-title">Card title</h4>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                        </div>
+                        <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <a href="img/thrive2.jpg" data-fancybox="design" data-caption="My caption">
+                            <img src="img/thrive2.jpg" class="card-img-top" alt="">
+                        </a>
+                        <div class="card-block">
+                        <h4 class="card-title">Card title</h4>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                        </div>
+                        <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="card-deck">
+                    <div class="card">
+                        <a href="img/thrive5.jpg" data-fancybox="design" data-caption="My caption">
+                            <img src="img/thrive5.jpg" class="card-img-top" alt="">
+                        </a>
+                        <div class="card-block">
+                        <h4 class="card-title">Card title</h4>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <a href="img/thrive6.jpg" data-fancybox="design" data-caption="My caption">
+                            <img src="img/thrive6.jpg" class="card-img-top" alt="">
+                        </a>
+                        <div class="card-block">
+                        <h4 class="card-title">Card title</h4>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                        </div>
+                        <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <a href="img/thrive7.jpg" data-fancybox="design" data-caption="My caption">
+                            <img src="img/thrive7.jpg" class="card-img-top" alt="">
+                        </a>
+                        <div class="card-block">
+                        <h4 class="card-title">Card title</h4>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                        </div>
+                        <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <a href="img/thrive8.jpg" data-fancybox="design" data-caption="My caption">
+                            <img src="img/thrive8.jpg" class="card-img-top" alt="">
+                        </a>
+                        <div class="card-block">
+                        <h4 class="card-title">Card title</h4>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                        </div>
+                        <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <a href="img/thrive2.jpg" data-fancybox="design" data-caption="My caption">
+                            <img src="img/thrive2.jpg" class="card-img-top" alt="">
+                        </a>
+                        <div class="card-block">
+                        <h4 class="card-title">Card title</h4>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                        </div>
+                        <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="card-deck">
+                    <div class="card">
+                        <a href="img/MurrayMustangs-01.png" data-fancybox="design" data-caption="My caption">
+                            <img src="img/MurrayMustangs-01.png" class="card-img-top" alt="Murray Mustangs logo">
+                        </a>
+                        <div class="card-block">
+                        <h4 class="card-title">Card title</h4>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <a href="img/digitalChristmas.jpg" data-fancybox="design" data-caption="My caption">
+                            <img src="img/digitalChristmas.jpg" class="card-img-top" alt="digitally created image of boy hanging an ornament on a Christmas tree">
+                        </a>
+                        <div class="card-block">
+                        <h4 class="card-title">Card title</h4>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                        </div>
+                        <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <a href="img/haitiLogos-03.jpg" data-fancybox="design" data-caption="My caption">
+                            <img src="img/haitiLogos-03.jpg" class="card-img-top" alt="">
+                        </a>
+                        <div class="card-block">
+                        <h4 class="card-title">Card title</h4>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                        </div>
+                        <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <a href="img/desertRats5.jpg" data-fancybox="design" data-caption="My caption">
+                            <img src="img/desertRats5.jpg" class="card-img-top" alt="">
+                        </a>
+                        <div class="card-block">
+                        <h4 class="card-title">Card title</h4>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                        </div>
+                        <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <a href="img/precizionSportsLogo.jpg" data-fancybox="design" data-caption="My caption">
+                            <img src="img/precizionSportsLogo.jpg" class="card-img-top" alt="">
+                        </a>
                         <div class="card-block">
                         <h4 class="card-title">Card title</h4>
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -314,8 +473,10 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
         <!-- Bootstrap JS -->
         <script src="vendor/bootstrap/js/bootstrap.js"></script>
+        <!-- Fancybox JS -->
+        <script src="vendor/fancybox/js/jquery.fancybox.js"></script>
         <!-- Waypoints JS -->
-        <script src="vendor/waypoints/js/jquery.waypoints.min.js"></script>
+        <!--<script src="vendor/waypoints/js/jquery.waypoints.min.js"></script>-->
         <!-- PROGRESSBAR JS -->
         <script src="vendor/progressbar/js/progressbar.js"></script>
         <!--[if gt IE 9]><!-->
