Add new project resources and remove old portfolio images

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -281,6 +281,18 @@
                         </div>
                     </div>
                     <div class="card">
+                        <a href="img/aecomhighperformancebuildings.png" data-fancybox="design" data-caption="My caption">
+                            <img src="img/aecomhighperformancebuildings.png" class="card-img-top" alt="">
+                        </a>
+                        <div class="card-block">
+                        <h4 class="card-title">AECOM High Performance Buildings</h4>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                    <div class="card">
                         <a href="img/thrive6.jpg" data-fancybox="design" data-caption="My caption">
                             <img src="img/thrive6.jpg" class="card-img-top" alt="">
                         </a>
